name:
  primitive-extras
version:
  0.1
category:
  Primitive
synopsis:
  Extras for the "primitive" library
homepage:
  https://github.com/metrix-ai/primitive-extras
bug-reports:
  https://github.com/metrix-ai/primitive-extras/issues
author:
  Metrix Ninjas <ninjas@metrix.ai>
maintainer:
  Metrix Ninjas <ninjas@metrix.ai>
copyright:
  (c) 2018, Metrix.AI
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/metrix-ai/primitive-extras.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLists, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    PrimitiveExtras.Unfolds
    PrimitiveExtras.Folds
    PrimitiveExtras.MultiPrimArray
    PrimitiveExtras.UnliftedArray
  other-modules:
    PrimitiveExtras.Prelude
    PrimitiveExtras.Types
    PrimitiveExtras.UnliftedArray.Potoki.Consume
  build-depends:
    base >=4.7 && <5,
    cereal >=0.5.5 && <0.6,
    containers >=0.5 && <0.6,
    contravariant >=1.4 && <2,
    deferred-folds >=0.4.1 && <0.5,
    foldl >=1 && <2,
    hashable >=1 && <2,
    pointed >=5 && <6,
    potoki >=2 && <2.1,
    potoki-cereal >=0.2.1.1 && <0.3,
    potoki-core >=2.2 && <2.3,
    primitive >=0.6.4 && <0.7,
    profunctors >=5 && <6,
    semigroupoids >=5.2 && <6,
    unordered-containers >=0.2.9 && <0.3,
    vector >=0.12 && <0.13
